Timeline can be ploted from data extracted from the repo

--- a/views/timeline.hbs
+++ b/views/timeline.hbs
@@ -37,14 +37,17 @@
   statistics()
   </script>
 
-  
+
 </head>
 <body>
   <div>
     <h3>Release Dates</h3>
     <div id="timeline1"></div>
   </div>
- 
+
+ <div>
+<button onclick="dateOfRelease()">release dates</button>
+</div>
  
 </body>
 
