--- a/views/index.hbs
+++ b/views/index.hbs
@@ -229,7 +229,7 @@ hr {
 
 <form class="example" action="/" style="margin:auto;max-width:800px" method="post">
 <h1>Search Using GitHub Username</h1>
-  <input type="text" placeholder="search user name" name="username"
+  <input type="text" placeholder="search username" name="username"
   id = "username">
   
         <div id="formsubmitbutton">
@@ -300,7 +300,7 @@ hr {
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
             {{#each repoNames}}
-            <a href="/charts" >{{this}}</a>
+            <a href="/users/charts" >{{this}}</a>
             {{/each}}
           </div>
         </div>
@@ -314,19 +314,16 @@ hr {
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="/users/authorise" method="post">
+  <form class="modal-content" action="/users" method="post">
     <div class="container">
       <h1>Authorisation</h1>
       <p>Please fill in your App's details, this will grant you access to your organisation's statistics.</p>
       <hr>
-      <label for="clientId"><b>Client ID</b></label>
-      <input type="text" placeholder="Enter Client-ID" name="clientId" required>
-
-      <label for="clientSecret"><b>Client Secret</b></label>
-      <input type="text" placeholder="Enter Client-Secret" name="clientSecret" required>
+      <label for="accessToken"><b>Access Token</b></label>
+      <input type="text" placeholder="Enter Personal Access Token" name="accessToken" required>
 
 
-      <p>Click this link to create a GitHub App for your organisation so that you can acquire the CLIENT-ID and CLIENT-SECRET <a href="https://help.github.com/articles/installing-an-app-in-your-organization/" style="color:dodgerblue">GitHub App</a>.</p>
+      <p>Click this link to create a GitHub Personal Access Token <a href="https://help.github.com/articles/installing-an-app-in-your-organization/" style="color:dodgerblue">GitHub App</a>.</p>
 
       <div class="clearfix">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
