contributions graph ploted

--- a/views/charts.html
+++ b/views/charts.html
@@ -56,8 +56,12 @@ td, th {
 
     <div>
        <div id="timeline1"></div>
-    </div>
-    <div>
+       <div>
+          </div>
+            <div align="center" id="barGraph"></div>
+          <div>
+       </div>
+    
       <div id="clickedBar"></div>
       <div id="releaser"></div>
       <div id="date"></div>
