Table of pull requests per developer per release rendered

--- a/views/charts.html
+++ b/views/charts.html
@@ -71,8 +71,14 @@ td, th {
       </script>
 
       <div id="summary"></div>
-      <div>
-              <div id = "figure"></div>
+      <div class = "row">
+        <div>
+          <div class = "column" id = "figure" ></div>
+        </div>
+        <div>
+          <div class = "column" id = "releasePerDev"></div>
+        </div>
+               
       </div>
       <div>
        <div id="timeline1"></div>
