--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -101,3 +101,18 @@ body {
       height:20px; width:20px; float:left;
     }
 
+/* Create two equal columns that floats next to each other */
+* {
+    box-sizing: border-box;
+}
+
+.row {
+    display: flex;
+}
+
+/* Create two equal columns that sits next to each other */
+.column {
+    flex: 50%;
+    padding: 50px;
+    
+}
