overall contributions graph ploted

--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -116,3 +116,15 @@ body {
     padding: 50px;
     
 }
+
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis--x path {
+  display: none;
+}
