--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -1,4 +1,4 @@
-body {
+    body {
     font-family: "Lato", sans-serif;
 }
 
@@ -109,10 +109,40 @@ body {
 .row {
     display: flex;
 }
-
-/* Create two equal columns that sits next to each other */
 .column {
     flex: 50%;
-    padding: 50px;
+    padding: 10px;
     
+}
+
+/* card stuffies
+
+/* Create four equal columns that floats next to each other */
+.column2 {
+    float: left;
+    width: 25%;
+    padding: 5px;
+    border-right: 10px solid #f1f1f1;
+    border-bottom: 10px solid #f1f1f1;
+}
+
+/* Clear floats after the columns */
+.row2:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+    .column2  {
+        width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column2  {
+        width: 100%;
+    }
 }
