cntributions per sprintploted

--- a/views/charts.html
+++ b/views/charts.html
@@ -87,6 +87,9 @@ td, th {
             <div align="center" id="barGraph"></div>
           <div>
        </div>
+       </div>
+            <div align="centre" id="#sprintBarGraph"></div>
+          <div>
 
          <div>
             <div id="clickedBar"></div>
