--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -132,17 +132,32 @@
     display: table;
     clear: both;
 }
+.column3 {
+    float: left;
+    width: 33%;
+    padding: 5px;
+    border-right: 10px solid #f1f1f1;
+    border-bottom: 10px solid #f1f1f1;
+}
+
+/* Clear floats after the columns */
+.row3:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 900px) {
-    .column2  {
+    .column2, .column3  {
         width: 50%;
     }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .column2  {
+    .column2 .column3  {
         width: 100%;
     }
 }
