few functions modified

--- a/views/charts.html
+++ b/views/charts.html
@@ -159,20 +159,9 @@ td, th {
         </div>               
       </div>
 
- 
-
-         <div>
-            <div id="clickedBar"></div>
-            <div id="releaser"></div>
-            <div id="date"></div>
-            <div id="SprintLength"></div>
-            <div id="clickedSprintLength"></div>
-            <div id="james"></div>
-          </div>
-      </div>
-
-      
-
+<div class="popup" >
+  <span class="popuptext" id="myPopup">Click the timeline bars for more details</span>
+</div>
 
        <div id="info"></div>
        <div id="quoteData"></div>
