--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -36,6 +36,8 @@
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+    .Osidenav {padding-top: 15px;}
+    .Osidenav a {font-size: 18px;}
 }
 
 /* Style the sidenav links and the dropdown button */
@@ -246,3 +248,97 @@
     from {opacity: 0;}
     to {opacity:1 ;}
 }
+
+* {
+    box-sizing: border-box;
+}
+/* Create three equal columns that floats next to each other */
+.Ocolumn3 {
+    float: left;
+    width: 83%;
+    padding: 10px;
+    height: 80px; /* Should be removed. Only for demonstration */
+}
+.Ocolumn4 {
+    float: left;
+    width: 17%;
+    padding: 10px;
+    height: 80px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.Orow3:after {
+    content: "";
+    display: table;
+    clear: both;
+    padding: 2px;
+}
+
+
+/* Create three equal columns that floats next to each other */
+.Ocolumn1 {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 120px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.Orow1:after {
+    content: "";
+    display: table;
+    clear: both;
+    padding: 2px;
+}
+/* Clear floats after the columns */
+.Orow2:after {
+    content: "";
+    display: table;
+    clear: both;
+    padding: 2px;
+}
+/* Create three equal columns that floats next to each other */
+.Ocolumn2 {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+.Ocolumn5 {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 120px; /* Should be removed. Only for demonstration */
+}
+
+.Osidenav {
+    height:56%;
+    width: 226px;
+    position: absolute;
+    top: 90px;
+    right: 10px;
+    background: #eee;
+    overflow-x: hidden;
+    padding: 8px 0;
+}
+
+.Osidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #2196F3;
+    display: block;
+}
+
+
+.Osidenav a:hover {
+    color: #064579;
+}
+
+.main2 {
+    margin-right: 220px; /* Same width as the sidebar + left position in px */
+    font-size: 12px; /* Increased text to enable scrolling */
+}
+
+
+    
