--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -188,3 +188,48 @@
     border-radius: 4px;
     background-color: lightblue;
 }
+
+/* 
+Repository list dropdown button
+*/
+
+.repodropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.repodropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.repodropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.repodropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.repodropdown-content a:hover {background-color: #f1f1f1}
+
+.repodropdown:hover .repodropdown-content {
+    display: block;
+}
+
+.repodropdown:hover .repodropbtn {
+    background-color: #3e8e41;
+}
