--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -196,17 +196,19 @@ Repository list dropdown button
 */
 
 .repodropbtn {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
-    padding: 16px;
+    padding: 5px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width:100%;
 }
 
 .repodropdown {
     position: relative;
     display: inline-block;
+    width:100%;
 }
 
 .repodropdown-content {
@@ -226,7 +228,7 @@ Repository list dropdown button
     display: block;
 }
 
-.repodropdown-content a:hover {background-color: #f1f1f1}
+.repodropdown-content a:hover {background-color:  #818181   }
 
 .repodropdown:hover .repodropdown-content {
     display: block;
@@ -299,13 +301,13 @@ Repository list dropdown button
 /* Create three equal columns that floats next to each other */
 .Ocolumn3 {
     float: left;
-    width: 83%;
+    width: 84%;
     padding: 10px;
     height: 80px; /* Should be removed. Only for demonstration */
 }
 .Ocolumn4 {
-    float: left;
-    width: 17%;
+    float: right;
+    width: 15%;
     padding: 10px;
     height: 80px; /* Should be removed. Only for demonstration */
 }
@@ -322,10 +324,15 @@ Repository list dropdown button
 /* Create three equal columns that floats next to each other */
 .Ocolumn1 {
     float: left;
-    width: 33.33%;
+    width: 33%;
     padding: 10px;
     height: 120px; /* Should be removed. Only for demonstration */
+    border-right: 3px solid green;
+    border-bottom: 3px solid green;
+    border-left: 1px solid green;
+    font-size: 16px;
 }
+
 
 /* Clear floats after the columns */
 .Orow1:after {
@@ -346,22 +353,29 @@ Repository list dropdown button
     float: left;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+     border-right: 3px solid green;
+    border-bottom: 3px solid green;
+    border-left: 1px solid green;
+    border-top: 1px solid green;
+    font-size: 16px;
 }
 .Ocolumn5 {
     float: left;
-    width: 50%;
-    padding: 10px;
-    height: 120px; /* Should be removed. Only for demonstration */
+    width: 49.5%;
+    padding: 10px;    
+    border-right: 3px solid green;
+    border-bottom: 3px solid green;
+    border-left: 1px solid green;
+    font-size: 16px;
 }
 
 .Osidenav {
-    height:56%;
-    width: 226px;
+    height:25%;
+    width: 220px;
     position: absolute;
     top: 90px;
-    right: 10px;
-    background: #eee;
+    right: 17px;
+    background: #aaa;
     overflow-x: hidden;
     padding: 8px 0;
 }
@@ -384,5 +398,48 @@ Repository list dropdown button
     font-size: 12px; /* Increased text to enable scrolling */
 }
 
-
-    
+/*
+Create loader to show while waiting for data to finish loading*/
+/* Center the loader */
+/*
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+  
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  */
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    width: 50%;
+}
+.piecenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    width: 50%;
+}
