--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,7 +51,8 @@ form.example::after {
 
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: inline-block;    
+    width: 80%;
 }
 
 .dropdown-content {
@@ -136,7 +137,7 @@ button {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 80%;
     opacity: 0.9;
 }
 
@@ -223,98 +224,12 @@ hr {
 </head>
 
 
-<body>
-
-<div class="center">
-
-<form class="example" action="/" style="margin:auto;max-width:800px" method="post">
-<h1>Search Using GitHub Username</h1>
-  <input type="text" placeholder="search username" name="username"
-  id = "username">
-  
-        <div id="formsubmitbutton">
-        <button type="submit" id = "button" name = "submitter" value = "Submit Button"  onclick="ButtonClicked()" ><i class="fa fa-search"></i></button>
-        </div>
-        <div id="buttonreplacement" style="margin-left:60px; display:none;">
-        <img src="//www.willmaster.com/images/preload.gif" alt="loading...">
-        </div>
-</form>
-<br>
-<div>
-   {{#if loading}}
-      <button class="buttonload">
-  <i class="fa fa-refresh fa-spin"></i>Loading
-</button>
-     
-  {{/if}}
-
-  {{#if userDetails.userValidation}}
-     <h1>User does not Exist</h1>
-  {{/if}}
-
-  {{#if userDetails.userInfoFound}}
-      <div>
-        Github Username: {{userDetails.userName}}<br>
-        Full name: {{userDetails.name}}<br>
-        Total Public Repos: {{userDetails.totalPublicRepos}}<br>
-        Started: {{userDetails.dateCreated}}<br><br>
-      </div>
-  {{/if}}
-
-  {{#if userDetails.totalPublicRepos}}
-     
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">Available Repos</button>
-          <div id="myDropdown" class="dropdown-content">
-            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            {{#each userDetails.userRepos}}
-            <a href= "/{{@index}}" >{{this}}</a>
-            {{/each}}
-          </div>
-        </div>
-  
-  {{/if}}
+<body  onload =" document.getElementById('id01').style.display='block'">
 
 
-
-{{#if orgNames}}
-     
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">Organisation List</button>
-          <div id="myDropdown" class="dropdown-content">
-            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            {{#each orgNames}}
-            <a href="../users/orgDetails/{{@index}}" >{{this}}</a>
-            {{/each}}
-          </div>
-        </div>
-  
-  {{/if}}
-  </div>
-
-
-  <div>
-  {{#if repoNames}}
-     
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">Available Repos</button>
-          <div id="myDropdown" class="dropdown-content">
-            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            {{#each repoNames}}
-
-
-            <a href="/users/charts/{{@index}}" >{{this}}</a>
-
-            {{/each}}
-          </div>
-        </div>
-  
-  {{/if}}
-
-</div>
   
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Organisation Statistics</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:full;">Analyse A Repository</button>
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
